--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:url" content="https://www.chuu.kr/">
     <meta property="og:title" data-lang="og_title" content="CHUU - 주문 제작 케이크 & 쿠키">
     <meta property="og:description" data-lang="og_description" content="달콤한 순간을 선물하는 CHUU의 특별한 주문 제작 케이크와 수제 쿠키를 만나보세요. 모든 순간이 더욱 특별해집니다.">
-    <meta property="og:image" content="https://www.chuu.kr/section/home/1.jpg">
+    <meta property="og:image" content="https://www.chuu.kr/section/home/01.jpg">
     <meta name="author" content="Maxim">
 	<link rel="author" href="https://www.maxim.pe.kr">
     <link rel="canonical" href="https://www.chuu.kr/">
@@ -25,7 +25,7 @@
       "@context": "https://schema.org",
       "@type": "Bakery",
       "name": "CHUU",
-      "image": "https://www.chuu.kr/section/home/1.jpg",
+      "image": "https://www.chuu.kr/section/home/01.jpg",
       "description": "정성껏 만든 케이크와 쿠키로 당신의 모든 날을 기념일처럼 특별하게 만들어 드립니다. CHUU는 신선한 재료와 독창적인 디자인으로 세상에 단 하나뿐인 달콤함을 선물합니다.",
       "address": {
         "@type": "PostalAddress",
@@ -58,11 +58,6 @@
     </nav>
 
     <header id="home" class="pe-header">
-        <div class="bg-image-slider">
-            <div class="bg-image-item active"><img src="./section/home/01.jpg" alt="첫 번째 슬라이드 배경"></div>
-            <div class="bg-image-item"><img src="./section/home/02.jpg" alt="두 번째 슬라이드 배경"></div>
-            <div class="bg-image-item"><img src="./section/home/03.jpg" alt="세 번째 슬라이드 배경"></div>
-        </div>
         
         <div class="pe-header__content js-parallax-content">
             <h1 class="pe-header__title home-logo">CHUU</h1>
@@ -241,7 +236,8 @@
                         <div class="pe-card__content">
                             <h3 class="pe-card__title" data-lang="cakes_lettering_title"></h3>
                             <p class="pe-card__description" data-lang="cakes_lettering_desc"></p>
-                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_lettering_option"></div>
+                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_lettering_option">
+                            </div>
                         </div>
                         <div class="pe-price-info">
                             <div class="pe-price-info__item">
@@ -255,7 +251,8 @@
                         <div class="pe-card__content">
                             <h3 class="pe-card__title" data-lang="cakes_photo_title"></h3>
                             <p class="pe-card__description" data-lang="cakes_photo_desc"></p>
-                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_photo_option"></div>
+                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_photo_option">
+                            </div>
                         </div>
                         <div class="pe-price-info">
                             <div class="pe-price-info__item">
@@ -269,7 +266,8 @@
                         <div class="pe-card__content">
                             <h3 class="pe-card__title" data-lang="cakes_3d_title"></h3>
                             <p class="pe-card__description" data-lang="cakes_3d_desc"></p>
-                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_3d_option"></div>
+                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_3d_option">
+                            </div>
                         </div>
                         <div class="pe-price-info">
                             <div class="pe-price-info__item">
