--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="canonical" href="https://www.chuu.kr/">
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Poppins:wght@400;600;700&family=Fredoka+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="https://cdn.dam.so/_inc/express/page-v2.css?update=20251117">
+    <link rel="stylesheet" href="https://cdn.9style.com/_inc/express/page-v2.css">
     <link rel="stylesheet" href="./lay.css?update=20251118">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title data-lang="site_title">CHUU - 주문 제작 케이크 & 쿠키</title>
@@ -75,7 +75,7 @@
         </section>
 
         <section id="promotion" class="pe-section js-fade-in pe-section--dynamic" style="background-image: url('./section/promotion/bg.jpg');">
-            <div class="pe-overlay has-dot-pattern"></div>
+            <div class="pe-overlay pe-overlay--dotted"></div>
             <div class="pe-container">
                 <div class="pe-grid pe-grid--cols-1">
                     <div class="pe-card pe-card--horizontal">
@@ -412,7 +412,7 @@
     <div id="turnstile-container" style="position:absolute; top:-9999px; left:-9999px;"></div>
 
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?onload=onloadTurnstileCallback" async defer></script>
-    <script src="https://cdn.dam.so/_inc/express/page-v2.js?update=20251117" defer></script>
+    <script src="https://cdn.9style.com/_inc/express/page-v2.js" defer></script>
     <script src="./lay.js?update=20251118" defer></script>
 </body>
 </html>
