--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <meta property="og:url" content="https://www.chuu.kr/">
     <meta property="og:title" data-lang="og_title" content="CHUU - 주문 제작 케이크 & 쿠키">
     <meta property="og:description" data-lang="og_description" content="달콤한 순간을 선물하는 CHUU의 특별한 주문 제작 케이크와 수제 쿠키를 만나보세요. 모든 순간이 더욱 특별해집니다.">
-    <meta property="og:image" content="https://www.chuu.kr/section/home/01.jpg">
+    <meta property="og:image" content="https://www.chuu.kr/section/home/1.jpg">
     <meta name="author" content="Maxim">
 	<link rel="author" href="https://www.maxim.pe.kr">
     <link rel="canonical" href="https://www.chuu.kr/">
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Poppins:wght@400;600;700&family=Fredoka+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="https://cdn.9style.com/_inc/express/page-v2.css">
+    <link rel="stylesheet" href="https://cdn.9style.com/_inc/express/page-v2.css?update=20251117">
     <link rel="stylesheet" href="./lay.css?update=20251118">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title data-lang="site_title">CHUU - 주문 제작 케이크 & 쿠키</title>
@@ -25,7 +25,7 @@
       "@context": "https://schema.org",
       "@type": "Bakery",
       "name": "CHUU",
-      "image": "https://www.chuu.kr/section/home/01.jpg",
+      "image": "https://www.chuu.kr/section/home/1.jpg",
       "description": "정성껏 만든 케이크와 쿠키로 당신의 모든 날을 기념일처럼 특별하게 만들어 드립니다. CHUU는 신선한 재료와 독창적인 디자인으로 세상에 단 하나뿐인 달콤함을 선물합니다.",
       "address": {
         "@type": "PostalAddress",
@@ -236,8 +236,7 @@
                         <div class="pe-card__content">
                             <h3 class="pe-card__title" data-lang="cakes_lettering_title"></h3>
                             <p class="pe-card__description" data-lang="cakes_lettering_desc"></p>
-                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_lettering_option">
-                            </div>
+                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_lettering_option"></div>
                         </div>
                         <div class="pe-price-info">
                             <div class="pe-price-info__item">
@@ -251,8 +250,7 @@
                         <div class="pe-card__content">
                             <h3 class="pe-card__title" data-lang="cakes_photo_title"></h3>
                             <p class="pe-card__description" data-lang="cakes_photo_desc"></p>
-                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_photo_option">
-                            </div>
+                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_photo_option"></div>
                         </div>
                         <div class="pe-price-info">
                             <div class="pe-price-info__item">
@@ -266,8 +264,7 @@
                         <div class="pe-card__content">
                             <h3 class="pe-card__title" data-lang="cakes_3d_title"></h3>
                             <p class="pe-card__description" data-lang="cakes_3d_desc"></p>
-                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_3d_option">
-                            </div>
+                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_3d_option"></div>
                         </div>
                         <div class="pe-price-info">
                             <div class="pe-price-info__item">
@@ -412,7 +409,7 @@
     <div id="turnstile-container" style="position:absolute; top:-9999px; left:-9999px;"></div>
 
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?onload=onloadTurnstileCallback" async defer></script>
-    <script src="https://cdn.9style.com/_inc/express/page-v2.js" defer></script>
+    <script src="https://cdn.9style.com/_inc/express/page-v2.js?update=20251117" defer></script>
     <script src="./lay.js?update=20251118" defer></script>
 </body>
 </html>
