--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
         </section>
 
         <!-- Request (Core Standard) -->
-        <section id="request" class="pe-section js-fade-in section-divider to-secondary">
+        <section id="demo" class="pe-section js-fade-in section-divider to-secondary">
             <div class="pe-container">
                 <h2><span translate="no" class="material-symbols-outlined notranslate">auto_awesome</span><span data-lang="ex_demo_title"></span></h2>
                 <p class="pe-section__description" data-lang="ex_demo_desc"></p>
