--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         </section>
 
         <!-- Contact Form (Demo Mode) -->
-        <section id="contact" class="pe-section pe-section--secondary js-fade-in">
+        <section id="contact" class="pe-section section-divider js-fade-in">
             <div class="pe-container">
                 <h2>
                     <span translate="no" class="material-symbols-outlined notranslate">mail</span>
@@ -362,7 +362,7 @@
         </section>
 
         <!-- Search Form (Demo Mode) -->
-        <section id="search" class="pe-section js-fade-in">
+        <section id="search" class="pe-section section-divider js-fade-in">
             <div class="pe-container">
                 <h2>
                     <span translate="no" class="material-symbols-outlined notranslate">search</span>
@@ -381,7 +381,7 @@
         </section>
 
         <!-- Request (Core Standard) -->
-        <section id="demo" class="pe-section js-fade-in section-divider to-secondary">
+        <section id="demo" class="pe-section js-fade-in to-secondary">
             <div class="pe-container">
                 <h2><span translate="no" class="material-symbols-outlined notranslate">auto_awesome</span><span data-lang="ex_demo_title"></span></h2>
                 <p class="pe-section__description" data-lang="ex_demo_desc"></p>
