--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         </section>
 
         <!-- Contact Form (Demo Mode) -->
-        <section id="contact" class="pe-section section-divider js-fade-in">
+        <section id="contact" class="pe-section js-fade-in section-divider to-secondary">
             <div class="pe-container">
                 <h2>
                     <span translate="no" class="material-symbols-outlined notranslate">mail</span>
@@ -362,7 +362,7 @@
         </section>
 
         <!-- Search Form (Demo Mode) -->
-        <section id="search" class="pe-section section-divider js-fade-in">
+        <section id="search" class="pe-section js-fade-in section-divider to-primary">
             <div class="pe-container">
                 <h2>
                     <span translate="no" class="material-symbols-outlined notranslate">search</span>
