--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <img src="./section/promotion/01.jpg" alt="Promotion" class="pe-card__image">
                         </div>
                         <div class="pe-card__content">
-                            <span class="pe-card__tag" data-lang="promotion_tag_gift">Event</span>
+                            <span class="pe-card__tag">Event</span>
                             <h3 class="pe-card__title" data-lang="promotion_01_title"></h3>
                             <p class="pe-card__description" data-lang="promotion_01_desc"></p>
                         </div>
