--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!--
-    Version: 3.0.0 (V3 Refactored)
+    Version: 3.2.0 (Refactored for Express V3.2)
     Framework: Page Express V3 (Tier 2) + Express Core (Tier 1)
-    Last Modified: 2025-11-23
-    Author: Maxim
     Theme: CHUU - Pastel Dream
-    License: © 2025 Maxim. All Rights Reserved.
 -->
 <!DOCTYPE html>
 <html lang="ko">
@@ -14,60 +11,24 @@
 
     <!-- SEO & Metadata -->
     <title data-lang="site_title">CHUU - 주문 제작 케이크 & 쿠키</title>
-    <meta name="description" data-lang="meta_description" content="달콤한 순간을 선물하는 CHUU의 특별한 주문 제작 케이크와 수제 쿠키를 만나보세요. 모든 순간이 더욱 특별해집니다.">
-    <meta name="keywords" content="레터링 케이크, 포토 케이크, 입체 케이크, 수제 쿠키, 주문 제작 케이크, 기념일 케이크, 답례품 쿠키, CHUU">
+    <meta name="description" data-lang="meta_description" content="달콤한 순간을 선물하는 CHUU의 특별한 주문 제작 케이크와 수제 쿠키를 만나보세요.">
     <link rel="canonical" href="https://www.chuu.kr/">
-
-    <!-- Open Graph -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.chuu.kr/">
-    <meta property="og:title" data-lang="og_title" content="CHUU - 주문 제작 케이크 & 쿠키">
-    <meta property="og:description" data-lang="og_description" content="달콤한 순간을 선물하는 CHUU의 특별한 주문 제작 케이크와 수제 쿠키를 만나보세요.">
-    <meta property="og:image" content="https://www.chuu.kr/section/home/1.jpg">
-    <meta property="og:site_name" content="CHUU">
-
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Poppins:wght@400;600;700&family=Fredoka+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
-    <!-- [Tier 1] Express Core V3 -->
-    <link rel="stylesheet" href="https://cdn.dam.so/_inc/express/express-v3.css">
-    <script src="https://cdn.dam.so/_inc/express/express-v3.js"></script>
+    <!-- [Tier 1] Express Core V3.2 -->
+    <link rel="stylesheet" href="./express-v3.css">
+    <script src="./express-v3.js"></script>
 
-    <!-- [Tier 2] Page Express V3 -->
-    <link rel="stylesheet" href="https://cdn.dam.so/_inc/express/page-v3.css">
-    <script src="https://cdn.dam.so/_inc/express/page-v3.js"></script>
+    <!-- [Tier 2] Page Express V3.2 -->
+    <link rel="stylesheet" href="./page-v3.css">
+    <script src="./page-v3.js"></script>
 
     <!-- [Tier 3] User Theme -->
     <link rel="stylesheet" href="./lay.css">
     <script src="./lay.js" defer></script>
-
-    <!-- Schema.org -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Bakery",
-      "name": "CHUU",
-      "image": "https://www.chuu.kr/section/home/1.jpg",
-      "description": "정성껏 만든 케이크와 쿠키로 당신의 모든 날을 기념일처럼 특별하게 만들어 드립니다.",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "633 W 5th St",
-        "addressLocality": "Los Angeles",
-        "addressRegion": "CA",
-        "postalCode": "90071",
-        "addressCountry": "USA"
-      },
-      "url": "https://www.chuu.kr/",
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "email": "chuu@chuu.kr",
-        "contactType": "customer service"
-      }
-    }
-    </script>
 </head>
 <body>
     <!-- Navigation -->
@@ -83,7 +44,7 @@
         </div>
     </nav>
 
-    <!-- Header -->
+    <!-- Header (Canvas Binding) -->
     <header id="home" class="pe-header">
         <div class="pe-header__content js-parallax-content">
             <h1 class="pe-header__title home-logo">CHUU</h1>
@@ -92,7 +53,7 @@
     </header>
 
     <main>
-        <!-- Overview -->
+        <!-- Overview (Auto-Injection Target) -->
         <section id="overview" class="pe-section js-fade-in">
             <div class="pe-container">
                 <h2>
@@ -100,13 +61,12 @@
                     <span data-lang="overview_title">사랑을 담아, CHUU</span>
                 </h2>
                 <p class="pe-section__description" data-lang="overview_desc">정성껏 만든 케이크와 쿠키로 당신의 모든 날을 기념일처럼 특별하게 만들어 드립니다. CHUU는 신선한 재료와 독창적인 디자인으로 세상에 단 하나뿐인 달콤함을 선물합니다.</p>
-                <!-- Demo Message (Core Data) -->
-                <p class="pe-demo-msg" data-lang="ex_demo_msg_overview"></p>
+                <!-- [V3.2] Demo Message removed (Auto Injected) -->
             </div>
         </section>
 
-        <!-- Promotion -->
-        <section id="promotion" class="pe-section js-fade-in pe-section--dynamic" style="background-image: url('./section/promotion/bg.jpg');">
+        <!-- Promotion (Parallax Applied) -->
+        <section id="promotion" class="pe-section js-fade-in pe-section--dynamic pe-section--parallax" style="background-image: url('./section/promotion/bg.jpg');">
             <div class="pe-overlay pe-overlay--dotted"></div>
             <div class="pe-container">
                 <div class="pe-grid pe-grid--cols-1">
@@ -132,7 +92,7 @@
 
                 <div class="pe-slider js-content-slider">
                     <div class="pe-slider__wrapper">
-                        <!-- Cookie Items (1~6) -->
+                        <!-- Cookie 01 -->
                         <div class="pe-slider__item">
                             <div class="pe-card">
                                 <div class="pe-card__image-wrapper js-lightbox-trigger"><img src="./section/cookies/01.jpg" alt="Cookie 01" class="pe-card__image"></div>
@@ -152,7 +112,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Additional items omitted for brevity, structure is identical -->
+                         <!-- Cookie 02 -->
                         <div class="pe-slider__item">
                             <div class="pe-card">
                                 <div class="pe-card__image-wrapper js-lightbox-trigger"><img src="./section/cookies/02.jpg" alt="Cookie 02" class="pe-card__image"></div>
@@ -168,6 +128,7 @@
                                 </div>
                             </div>
                         </div>
+                         <!-- Cookie 03 -->
                          <div class="pe-slider__item">
                             <div class="pe-card">
                                 <div class="pe-card__image-wrapper js-lightbox-trigger"><img src="./section/cookies/03.jpg" alt="Cookie 03" class="pe-card__image"></div>
@@ -281,8 +242,9 @@
                         <p class="pe-process-item__description" data-lang="process_04_desc"></p>
                     </div>
                 </div>
+                <!-- [V3.2] Link Updated to @request for Action or keep as # if just scrolling. Here we use #demo target implicitly via button -->
                 <div class="pe-button-group">
-                    <a href="#" class="pe-button" data-lang-href="order_button_url" rel="noopener noreferrer">
+                    <a href="#demo" class="pe-button" data-lang-href="order_button_url" rel="noopener noreferrer">
                         <span data-lang="order_button"></span>
                     </a>
                 </div>
@@ -317,7 +279,7 @@
             </div>
         </section>
 
-        <!-- Profile -->
+        <!-- Profile (Auto-Injection Target) -->
         <section id="profile" class="pe-section js-fade-in section-divider to-primary">
             <div class="pe-container">
                 <h2><span translate="no" class="material-symbols-outlined notranslate">contact_mail</span><span data-lang="profile_title"></span></h2>
@@ -332,12 +294,11 @@
                         <a href="mailto:chuu@chuu.kr" class="pe-contact-list__value" data-lang="email_address" data-lang-href="email_href"></a>
                     </div>
                 </div>
-                <!-- Demo Message (Core Data) -->
-                <p class="pe-demo-msg" data-lang="ex_demo_msg_profile"></p>
+                <!-- [V3.2] Demo Message removed (Auto Injected) -->
             </div>
         </section>
 
-        <!-- Contact Form (Demo Mode) -->
+        <!-- Contact Form (Standardized) -->
         <section id="contact" class="pe-section js-fade-in section-divider to-secondary">
             <div class="pe-container">
                 <h2>
@@ -346,8 +307,8 @@
                 </h2>
                 <p class="pe-section__description" data-lang="ex_contact_desc">담당자가 확인 후 이메일 회신 드립니다.</p>
 
-                <!-- Demo Mode Active: Fake Response -->
-                <form class="pe-form pe-contact-form" autocomplete="off" data-demo-mode="true">
+                <!-- [V3.2] Attributes Removed. JS Injects data-demo="true" if config.demo_mode is true -->
+                <form class="pe-form pe-contact-form" autocomplete="off">
                     <input type="email" name="email" required class="pe-form__input" data-lang-placeholder="ex_placeholder_email" placeholder="Email">
                     <div class="pe-form__textarea-wrapper">
                         <textarea name="message" rows="5" required maxlength="1024" class="pe-form__textarea" data-lang-placeholder="ex_placeholder_msg" placeholder="Message"></textarea>
@@ -361,7 +322,7 @@
             </div>
         </section>
 
-        <!-- Search Form (Demo Mode) -->
+        <!-- Search Form (Standardized) -->
         <section id="search" class="pe-section js-fade-in section-divider to-primary">
             <div class="pe-container">
                 <h2>
@@ -370,7 +331,8 @@
                 </h2>
                 <p class="pe-section__description" data-lang="ex_search_desc"></p>
 
-                <form class="pe-form pe-search-form" autocomplete="off" data-demo-mode="true">
+                <!-- [V3.2] Attributes Removed -->
+                <form class="pe-form pe-search-form" autocomplete="off">
                     <input type="text" name="key" required class="pe-form__input" data-lang-placeholder="ex_placeholder_search" placeholder="Search...">
                     <button type="submit" class="pe-form__submit">
                         <span class="pe-form__text" data-lang="ex_btn_search">검색</span>
@@ -380,25 +342,14 @@
             </div>
         </section>
 
-        <!-- Request (Core Standard) -->
-        <section id="demo" class="pe-section js-fade-in">
-            <div class="pe-container">
-                <h2><span translate="no" class="material-symbols-outlined notranslate">auto_awesome</span><span data-lang="ex_demo_title"></span></h2>
-                <p class="pe-section__description" data-lang="ex_demo_desc"></p>
-                <div class="pe-button-group">
-                    <a href="#" class="pe-button" data-lang="ex_demo_button" data-lang-href="ex_demo_button_url" rel="noopener noreferrer">
-                        문의하기
-                    </a>
-                </div>
-            </div>
-        </section>
+        <!-- [V3.2] Manual #demo Section Removed (Auto Injected) -->
     </main>
 
     <!-- Footer -->
     <footer class="pe-footer">
         <div class="pe-container">
             <p class="render-as-html" data-lang="ex_copyright_text"></p>
-            <p><a data-lang-href="ex_footer_credit_url" rel="noopener noreferrer" data-lang="ex_footer_credit_text">Powered by Maxim</a></p>
+            <!-- [V3.2] Powered by Removed (Auto Injected) -->
         </div>
     </footer>
 
