--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Poppins:wght@400;600;700&family=Fredoka+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
-    <!-- [Tier 1] Express Core V3.2 -->
-    <link rel="stylesheet" href="./express-v3.css">
-    <script src="./express-v3.js"></script>
+    <!-- [Tier 1] Express Core V3 -->
+    <link rel="stylesheet" href="https://cdn.dam.so/_inc/express/express-v3.css">
+    <script src="https://cdn.dam.so/_inc/express/express-v3.js"></script>
 
-    <!-- [Tier 2] Page Express V3.2 -->
-    <link rel="stylesheet" href="./page-v3.css">
-    <script src="./page-v3.js"></script>
+    <!-- [Tier 2] Page Express V3 -->
+    <link rel="stylesheet" href="https://cdn.dam.so/_inc/express/page-v3.css">
+    <script src="https://cdn.dam.so/_inc/express/page-v3.js"></script>
 
     <!-- [Tier 3] User Theme -->
     <link rel="stylesheet" href="./lay.css">
