--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--
-    Version: 3.2.0 (Refactored for Express V3.2)
+    Version: 3.2.0 (Fixed)
     Framework: Page Express V3 (Tier 2) + Express Core (Tier 1)
     Theme: CHUU - Pastel Dream
 -->
@@ -19,14 +19,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
     <!-- [Tier 1] Express Core V3 -->
-    <link rel="stylesheet" href="https://cdn.dam.so/_inc/express/express-v3.css">
-    <script src="https://cdn.dam.so/_inc/express/express-v3.js"></script>
+    <link rel="stylesheet" href="https://cdn.9style.com/_inc/express/express-v3.css">
+    <script src="https://cdn.9style.com/_inc/express/express-v3.js"></script>
 
     <!-- [Tier 2] Page Express V3 -->
-    <link rel="stylesheet" href="https://cdn.dam.so/_inc/express/page-v3.css">
-    <script src="https://cdn.dam.so/_inc/express/page-v3.js"></script>
+    <link rel="stylesheet" href="https://cdn.9style.com/_inc/express/page/page-v3.css">
+    <script src="https://cdn.9style.com/_inc/express/page/page-v3.js"></script>
 
-    <!-- [Tier 3] User Theme -->
+    <!-- [Tier 3] User Theme (반드시 마지막에 로드) -->
     <link rel="stylesheet" href="./lay.css">
     <script src="./lay.js" defer></script>
 </head>
@@ -36,16 +36,15 @@
         <div class="pe-nav__container">
             <a href="#home" class="pe-nav__logo" data-lang="logo_text">CHUU</a>
             <div class="pe-nav__buttons">
-                <div id="lang-switcher">
-                    <button data-lang-set="ko" class="active">KO</button>
-                    <button data-lang-set="en">EN</button>
-                </div>
+                <!-- [Tier 1] 언어 전환 버튼 자동 생성 위치 -->
+                <div id="ex-lang"></div>
             </div>
         </div>
     </nav>
 
     <!-- Header (Canvas Binding) -->
-    <header id="home" class="pe-header">
+    <!-- [Tier 1] id="ex-canvas" 필수: 배경, 이펙트, 타이틀 자동 제어 -->
+    <header id="ex-canvas" class="pe-header">
         <div class="pe-header__content js-parallax-content">
             <h1 class="pe-header__title home-logo">CHUU</h1>
             <p class="pe-header__subtitle" data-lang="home_subtitle">당신의 달콤한 순간을 만들어요</p>
@@ -54,18 +53,18 @@
 
     <main>
         <!-- Overview (Auto-Injection Target) -->
+        <!-- [Tier 2] Demo Mode 활성화 시 하단 안내 문구 자동 삽입됨 -->
         <section id="overview" class="pe-section js-fade-in">
             <div class="pe-container">
                 <h2>
                     <span translate="no" class="material-symbols-outlined notranslate">cake</span>
                     <span data-lang="overview_title">사랑을 담아, CHUU</span>
                 </h2>
-                <p class="pe-section__description" data-lang="overview_desc">정성껏 만든 케이크와 쿠키로 당신의 모든 날을 기념일처럼 특별하게 만들어 드립니다. CHUU는 신선한 재료와 독창적인 디자인으로 세상에 단 하나뿐인 달콤함을 선물합니다.</p>
-                <!-- [V3.2] Demo Message removed (Auto Injected) -->
+                <p class="pe-section__description" data-lang="overview_desc"></p>
             </div>
         </section>
 
-        <!-- Promotion (Parallax Applied) -->
+        <!-- Promotion (Parallax) -->
         <section id="promotion" class="pe-section js-fade-in pe-section--dynamic pe-section--parallax" style="background-image: url('./section/promotion/bg.jpg');">
             <div class="pe-overlay pe-overlay--dotted"></div>
             <div class="pe-container">
@@ -152,10 +151,8 @@
                     </div>
                 </div>
 
-                <div class="pe-faq-container">
-                    <h3 class="pe-faq-title" data-lang="faq_title">FAQ</h3>
-                    <div class="pe-faq-list" data-content-type="faq" data-prefix="faq_cookie" data-dynamic-area></div>
-                </div>
+                <!-- [Tier 2] Dynamic Content (FAQ) -->
+                <div class="pe-faq-container" data-content-type="faq" data-prefix="faq_cookie"></div>
             </div>
         </section>
 
@@ -170,7 +167,8 @@
                         <div class="pe-card__content">
                             <h3 class="pe-card__title" data-lang="cakes_lettering_title"></h3>
                             <p class="pe-card__description" data-lang="cakes_lettering_desc"></p>
-                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_lettering_option" data-dynamic-area></div>
+                            <!-- [Tier 2] Dynamic Content (Product) -->
+                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_lettering_option"></div>
                         </div>
                         <div class="pe-price-info">
                             <div class="pe-price-info__item">
@@ -184,7 +182,7 @@
                         <div class="pe-card__content">
                             <h3 class="pe-card__title" data-lang="cakes_photo_title"></h3>
                             <p class="pe-card__description" data-lang="cakes_photo_desc"></p>
-                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_photo_option" data-dynamic-area></div>
+                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_photo_option"></div>
                         </div>
                         <div class="pe-price-info">
                             <div class="pe-price-info__item">
@@ -198,7 +196,7 @@
                         <div class="pe-card__content">
                             <h3 class="pe-card__title" data-lang="cakes_3d_title"></h3>
                             <p class="pe-card__description" data-lang="cakes_3d_desc"></p>
-                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_3d_option" data-dynamic-area></div>
+                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_3d_option"></div>
                         </div>
                         <div class="pe-price-info">
                             <div class="pe-price-info__item">
@@ -208,10 +206,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="pe-faq-container">
-                    <h3 class="pe-faq-title" data-lang="faq_title">FAQ</h3>
-                    <div class="pe-faq-list" data-content-type="faq" data-prefix="faq_cake" data-dynamic-area></div>
-                </div>
+                <!-- [Tier 2] Dynamic Content (FAQ) -->
+                <div class="pe-faq-container" data-content-type="faq" data-prefix="faq_cake"></div>
             </div>
         </section>
 
@@ -242,7 +238,8 @@
                         <p class="pe-process-item__description" data-lang="process_04_desc"></p>
                     </div>
                 </div>
-                <!-- [V3.2] Link Updated to @request for Action or keep as # if just scrolling. Here we use #demo target implicitly via button -->
+                
+                <!-- [V3.2] Link to Auto-Injected Demo Section -->
                 <div class="pe-button-group">
                     <a href="#demo" class="pe-button" data-lang-href="order_button_url" rel="noopener noreferrer">
                         <span data-lang="order_button"></span>
@@ -294,7 +291,6 @@
                         <a href="mailto:chuu@chuu.kr" class="pe-contact-list__value" data-lang="email_address" data-lang-href="email_href"></a>
                     </div>
                 </div>
-                <!-- [V3.2] Demo Message removed (Auto Injected) -->
             </div>
         </section>
 
@@ -306,19 +302,9 @@
                     <span data-lang="ex_contact_title">문의하기</span>
                 </h2>
                 <p class="pe-section__description" data-lang="ex_contact_desc">담당자가 확인 후 이메일 회신 드립니다.</p>
-
-                <!-- [V3.2] Attributes Removed. JS Injects data-demo="true" if config.demo_mode is true -->
-                <form class="pe-form pe-contact-form" autocomplete="off">
-                    <input type="email" name="email" required class="pe-form__input" data-lang-placeholder="ex_placeholder_email" placeholder="Email">
-                    <div class="pe-form__textarea-wrapper">
-                        <textarea name="message" rows="5" required maxlength="1024" class="pe-form__textarea" data-lang-placeholder="ex_placeholder_msg" placeholder="Message"></textarea>
-                        <div class="pe-form__char-counter">0/1024</div>
-                    </div>
-                    <button type="submit" class="pe-form__submit">
-                        <span class="pe-form__text" data-lang="ex_btn_submit">보내기</span>
-                    </button>
-                    <div class="pe-form__status"></div>
-                </form>
+                
+                <!-- [Tier 1] ID 바인딩: 엔진이 폼 자동 생성 (하드코딩 삭제됨) -->
+                <div id="ex-contact"></div>
             </div>
         </section>
 
@@ -331,30 +317,25 @@
                 </h2>
                 <p class="pe-section__description" data-lang="ex_search_desc"></p>
 
-                <!-- [V3.2] Attributes Removed -->
-                <form class="pe-form pe-search-form" autocomplete="off">
-                    <input type="text" name="key" required class="pe-form__input" data-lang-placeholder="ex_placeholder_search" placeholder="Search...">
-                    <button type="submit" class="pe-form__submit">
-                        <span class="pe-form__text" data-lang="ex_btn_search">검색</span>
-                    </button>
-                    <div class="pe-form__status"></div>
-                </form>
+                <!-- [Tier 1] ID 바인딩: 엔진이 폼 자동 생성 (하드코딩 삭제됨) -->
+                <div id="ex-search"></div>
             </div>
         </section>
 
-        <!-- [V3.2] Manual #demo Section Removed (Auto Injected) -->
     </main>
 
     <!-- Footer -->
     <footer class="pe-footer">
         <div class="pe-container">
+            <!-- [Tier 1] 저작권 문구 자동 바인딩 -->
             <p class="render-as-html" data-lang="ex_copyright_text"></p>
-            <!-- [V3.2] Powered by Removed (Auto Injected) -->
         </div>
     </footer>
 
-    <a href="#home" id="to-top-btn" class="hidden">
-        <span translate="no" class="material-symbols-outlined notranslate">arrow_upward</span>
-    </a>
+    <!-- Utils -->
+    <div id="pe-top"></div>
+    <div id="ex-turnstile"></div>
+    <!-- [Tier 1] Action Group Auto-Injected via Config -->
+
 </body>
 </html>
