--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <!-- Header (Canvas Binding) -->
     <!-- [Tier 1] id="ex-canvas" 필수: 배경, 이펙트, 타이틀 자동 제어 -->
-    <header class="pe-header">
+    <header id="ex-canvas" class="pe-header">
         <div class="pe-header__content js-parallax-content">
             <h1 class="pe-header__title home-logo">CHUU</h1>
             <p class="pe-header__subtitle" data-lang="home_subtitle">당신의 달콤한 순간을 만들어요</p>
