--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </section>
 
         <!-- Promotion (Parallax Background) -->
-        <section id="promotion" class="pe-section pe-section--dynamic pe-section--parallax" style="background-image: url('./section/promotion/bg.jpg');">
+        <section id="promotion" class="pe-section pe-section--parallax" style="background-image: url('./section/promotion/bg.jpg');">
             <div class="pe-overlay pe-overlay--dotted"></div>
             <div class="pe-container js-fade-in">
                 <div class="pe-grid pe-grid--cols-1">
