--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
         <!-- 3. Demo Request: Only in Demo Mode (After Profile) -->
         <section id="demo" class="pe-section">
             <div class="pe-container js-fade-in">
-                <h2><span translate="no" class="material-symbols-outlined notranslate">auto_awesome</span><span data-lang="ex_demo_title"></span></h2>
+                <h2><span translate="no" class="material-symbols-outlined notranslate">help</span><span data-lang="ex_demo_title"></span></h2>
                 <p class="pe-section__description" data-lang="ex_demo_desc"></p>
                 <div class="pe-button-group">
                     <a href="#" class="pe-button" data-lang="ex_demo_button" data-lang-href="ex_demo_button_url" rel="noopener noreferrer"></a>
