--- a/index.html
+++ b/index.html
@@ -343,8 +343,9 @@
         <section id="location" class="pe-section section-divider to-secondary">
             <div class="pe-container js-fade-in">
                 <h2><span translate="no" class="material-symbols-outlined notranslate">location_on</span><span data-lang="location_title"></span></h2>
-                <div class="pe-map-wrapper">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.689154412275!2d-118.2562447889396!3d34.05199927304996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c64848905333%3A0x4549452dfa14a635!2sU.S.%20Bank%20Tower!5e0!3m2!1sko!2skr!4v1719957863588!5m2!1sko!2skr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="pe-card">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.689154412275!2d-118.2562447889396!3d34.05199927304996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c64848905333%3A0x4549452dfa14a635!2sU.S.%20Bank%20Tower!5e0!3m2!1sko!2skr!4v1719957863588!5m2!1sko!2skr" width="100%" height="450" class="pe-card__map" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
                 </div>
                 <div class="pe-address-block">
                     <p><strong data-lang="location_label_address"></strong> <span data-lang="address_text"></span></p>
