--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
     <!-- [Tier 1] Express Core V4 (Facility) -->
-    <link rel="stylesheet" href="./express/express-v4.css">
-    <script src="./express/express-v4.js"></script>
+    <link rel="stylesheet" href="https://cdn.sigonggan.com/_inc/express/v4/express-v4.css">
+    <script src="https://cdn.sigonggan.com/_inc/express/v4/express-v4.js"></script>
 
     <!-- [Tier 2] Page Express V4 (Space) -->
-    <link rel="stylesheet" href="./express/page-v4.css">
-    <script src="./express/page-v4.js"></script>
+    <link rel="stylesheet" href="https://cdn.sigonggan.com/_inc/express/v4/page-v4.css">
+    <script src="https://cdn.sigonggan.com/_inc/express/v4/page-v4.js"></script>
 
     <!-- [Tier 3] User Theme (Interior) -->
     <link rel="stylesheet" href="./lay.css">
