--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" data-lang="og_title" content="CHUU">
     <meta property="og:description" data-lang="og_description" content="달콤한 순간을 선물하는 CHUU의 특별한 주문 제작 케이크와 수제 쿠키를 만나보세요.">
-    <meta property="og:image" content="./images/namecard.png">
+    <meta property="og:image" content="./section/home/1.jpg">
 
     <link rel="icon" href="./images/favicon.ico">
 
