--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Poppins:wght@400;600;700&family=Fredoka+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
-    <link rel="stylesheet" href="https://cdn.sigonggan.com/_inc/express/v4/express-v4.css">
-    <script src="https://cdn.sigonggan.com/_inc/express/v4/express-v4.js"></script>
+    <link rel="stylesheet" href="https://cdn.dam.so/_inc/express/v4/express-v4.css">
+    <script src="https://cdn.dam.so/_inc/express/v4/express-v4.js"></script>
 
-    <link rel="stylesheet" href="https://cdn.sigonggan.com/_inc/express/v4/page-v4.css">
-    <script src="https://cdn.sigonggan.com/_inc/express/v4/page-v4.js"></script>
+    <link rel="stylesheet" href="https://cdn.dam.so/_inc/express/v4/page-v4.css">
+    <script src="https://cdn.dam.so/_inc/express/v4/page-v4.js"></script>
 
     <link rel="stylesheet" href="./lay.css">
     <script src="./lay.js" defer></script>
